--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -15,7 +15,7 @@ steps:
     versionType: 'AutoVersion'
     projectJsonPath: 'project.jason'
     orchestratorConnection: 'TestUipathServiceConnection'
-    outputPath: '$(Build.ArtifactStagingDirectory)\Output'
+    outputPath: 'D:\aditya\Latest Backup\UipathProject_TestAutomation\Result\'
 
 - task: UiPathTest@2
   inputs:
