--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,13 @@ steps:
     orchestratorConnection: 'TestUipathServiceConnection'
     outputPath: '$(Build.ArtifactStagingDirectory)\Output'
 
+- task: UiPathDeploy@2
+  inputs:
+    orchestratorConnection: 'TestUipathServiceConnection'
+    packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
+    folderName: 'Default'
+    environments: 'vopak_env'
+
 - task: UiPathTest@2
   inputs:
     testTarget: 'TestProject'
@@ -28,12 +35,7 @@ steps:
     environment: 'vopak_env'
     folderName: 'Default'
     testReportDestination: '$(Build.ArtifactStagingDirectory)\Output'
+  continueOnError: true
 
-- task: UiPathDeploy@2
-  inputs:
-    orchestratorConnection: 'TestUipathServiceConnection'
-    packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
-    folderName: 'Default'
-    environments: 'vopak_env'
     
     
