--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
   inputs:
     testTarget: 'TestProject'
     orchestratorConnection: 'TestUipathServiceConnection'
-    testProjectPath: 'D:\aditya\latest uipath\UipathProject_TestAutomation\UipathProject_TestAutomation\project.json'
+    testProjectPath: '$(Build.ArtifactStagingDirectory)\Output\project.json'
     environment: 'vopak_env'
     folderName: 'Default'
     testReportDestination: '$(Build.ArtifactStagingDirectory)\Output'
