Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,10 +24,9 @@ steps:
 
 - task: UiPathTest@2
   inputs:
-    testTarget: 'TestProject'
+    testTarget: 'TestSet'
     orchestratorConnection: 'TestUipathServiceConnection'
-    testProjectPath: '$(Build.SourcesDirectory)'
-    environment: 'vopak_env'
+    testSet: 'test'
     folderName: 'Default'
   continueOnError: true
   
