Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,9 +24,10 @@ steps:
 
 - task: UiPathTest@2
   inputs:
-    testTarget: 'TestSet'
+    testTarget: 'TestProject'
     orchestratorConnection: 'TestUipathServiceConnection'
-    testSet: 'test'
+    testProjectPath: '$(Build.SourcesDirectory)'
+    environment: 'vopak_env'
     folderName: 'Default'
   continueOnError: true
   
