--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
     versionType: 'AutoVersion'
     projectJsonPath: 'project.json'
     outputType: 'Tests'
-    orchestratorConnection: 'UipathHyd'
+    orchestratorConnection: 'TurnKeyFeedyard'
     outputPath: '$(Build.ArtifactStagingDirectory)\Output'
 
 
@@ -25,18 +25,18 @@ steps:
 - task: UiPathTest@2
   inputs:
     testTarget: 'TestProject'
-    orchestratorConnection: 'UipathHyd'
+    orchestratorConnection: 'TurnKeyFeedyard'
     testProjectPath: '$(Build.SourcesDirectory)'
-    environment: 'vopak_env'
+    environment: 'TurnKey_Env'
     folderName: 'Default'
   continueOnError: true
   
 - task: UiPathDeploy@2
   inputs:
-    orchestratorConnection: 'UipathHyd'
+    orchestratorConnection: 'TurnKeyFeedyard'
     packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
     folderName: 'Default'
-    environments: 'vopak_env'
+    environments: 'TurnKey_Env'
 
     
     
